--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dotted_border: ^3.1.0
   intl: ^0.20.2
   flutter_bloc: ^9.1.1
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
