--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   http: ^1.6.0
   pdf: ^3.11.3
-  # printing: ^5.14.2
+  printing: ^5.14.2
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
