--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   pdf: ^3.11.3
   printing: ^5.14.2
   path_provider: ^2.1.5
+  excel: ^4.0.6
+  open_filex: ^4.7.0
 
 dev_dependencies:
   flutter_test:
