new push 23 feb

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     invalid_use_of_visible_for_testing_member: ignore
+    empty_catches: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
